[tool.poetry]
name = "daftar"
version = "0.1.0"
description = "The website of a person named Artin!"
authors = ["Artin Mohammadi <sheikhartin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sheikhartin/daftar"
keywords = ["portfolio", "personal-website", "django", "web-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
faker = "^24.7.1"
pygments = "^2.17.2"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
